--- a/index.html
+++ b/index.html
@@ -151,7 +151,13 @@
 "ammutaan leikisti",
 "naisen käsivarret ja jalat kokonaan piilossa",
 "viuhahdus tai moka",
-"lavashowssa näkyy vettä"
+"lavashowssa näkyy vettä",
+"paholaisteema",
+"pornoa",
+"pääesiintyjän vaatteeseen ei ole tuhlattu kangasta",
+"esiintyjät leikkivät patsaita",
+"järkyttävä ilme",
+"akrobaattinen hyppy tai loikka"
                 </textarea>
         </div>
         <div class="form-group">
